<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarCarro">

    <TextView
        android:id="@+id/lblTituloAgregar"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_horizontal"
        android:text="@string/titulo_agregar"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/placa"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/color"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/modelo"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblMotor"
            android:layout_width="238dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/motor" />

        <Spinner
            android:id="@+id/lstMotor"
            android:layout_width="277dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnBorrar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/borrar" />
    </LinearLayout>
</LinearLayout>